// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation > matches snapshot 1`] = `
<div>
  <div
    class="flex flex-row items-center justify-between py-4"
  >
    <a
      href="/"
    >
      <h4
        class="text-2xl font-extrabold"
      >
        SkillEd
      </h4>
    </a>
    <button
      class="px-7 py-3 text-white font-semibold rounded-lg bg-gradient-to-r from-orange-400 to-pink-500 hover:bg-gradient-to-r hover:from-orange-500 hover:to-pink-600"
    >
      Get started
    </button>
  </div>
</div>
`;

exports[`Navigation > matches snapshot with custom button class 1`] = `
<div>
  <div
    class="flex flex-row items-center justify-between py-4"
  >
    <a
      href="/"
    >
      <h4
        class="text-2xl font-extrabold"
      >
        SkillEd
      </h4>
    </a>
    <button
      class="px-7 py-3 text-white font-semibold rounded-lg bg-gradient-to-r from-orange-400 to-pink-500 hover:bg-gradient-to-r hover:from-orange-500 hover:to-pink-600 bg-blue-500 text-white"
    >
      Get started
    </button>
  </div>
</div>
`;
